--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,7 +3,7 @@ project(apercommon_test)
 
 set(CMAKE_CXX_STANDARD 11)
 
-include_directories(../../apercommon/include)
+include_directories(../include)
 
-add_executable(apercommon_test main.cpp)
+add_executable(apercommon_test test.cpp)
 target_link_libraries(apercommon_test apercommon)
