--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.1)
-project(apercommon_test)
+project(λcommon_test)
 
 set(CMAKE_CXX_STANDARD 11)
 
 include_directories(../include)
 
-add_executable(apercommon_test test.cpp)
-target_link_libraries(apercommon_test apercommon)
+add_executable(lambdacommon_test test.cpp)
+target_link_libraries(lambdacommon_test lambdacommon)
