:warning: Fix a missing include file in installation script...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ if (LAMBDACOMMON_INSTALL)
         get_filename_component(HEADER_PARENT_DIR ${LOOP_HEADER} DIRECTORY)
         install(FILES ${LOOP_HEADER} DESTINATION ${HEADER_PARENT_DIR})
     endforeach ()
+    install(FILES ${CMAKE_BINARY_DIR}/exports/lambdacommon_exports.h DESTINATION include/lambdacommon)
     install(TARGETS lambdacommon
             RUNTIME DESTINATION bin COMPONENT libraries
             LIBRARY DESTINATION lib COMPONENT libraries
