:floppy_disk: λcommon v1.5.4-6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(λcommon)
 
 include(GenerateExportHeader)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 option(LAMBDACOMMON_BUILD_STATIC "Build static libraries" OFF)
 option(LAMBDACOMMON_INSTALL "Generate installation target" ON)
@@ -19,21 +19,21 @@ endif ()
 
 # All files
 # There is the C++ headers files.
-set(HEADERS_CONNECTION include/lambdacommon/connection/url.h include/lambdacommon/connection/address.h)
-set(HEADERS_DOCUMENT include/lambdacommon/document/document.h)
+set(HEADERS_CONNECTION include/lambdacommon/connection/address.h)
+set(HEADERS_DOCUMENT include/lambdacommon/documents/document.h)
 set(HEADERS_GRAPHICS include/lambdacommon/graphics/color.h)
 set(HEADERS_FILESYSTEM include/lambdacommon/system/filesystem/filesystem.h)
 set(HEADERS_EXCEPTIONS include/lambdacommon/exceptions/exceptions.h)
-set(HEADERS_SYSTEM ${HEADERS_FILESYSTEM} include/lambdacommon/system/os.h include/lambdacommon/system/devices.h include/lambdacommon/system/terminal.h include/lambdacommon/system/system.h)
+set(HEADERS_SYSTEM ${HEADERS_FILESYSTEM} include/lambdacommon/system/os.h include/lambdacommon/system/devices.h include/lambdacommon/system/terminal.h include/lambdacommon/system/system.h include/lambdacommon/system/uri.h)
 set(HEADERS_BASE include/lambdacommon/lambdacommon.h include/lambdacommon/serializable.h include/lambdacommon/string.h include/lambdacommon/path.h)
 set(HEADERS_FILES ${HEADERS_CONNECTION} ${HEADERS_DOCUMENT} ${HEADERS_GRAPHICS} ${HEADERS_EXCEPTIONS} ${HEADERS_SYSTEM} ${HEADERS_BASE})
 # There is the C++ sources files.
-set(SOURCES_CONNECTION src/connection/address.cpp src/connection/url.cpp)
+set(SOURCES_CONNECTION src/connection/address.cpp)
 set(SOURCES_DOCUMENT)
 set(SOURCES_GRAPHICS src/graphics/color.cpp)
 set(SOURCES_FILESYSTEM src/system/filesystem/filesystem.cpp)
 set(SOURCES_SERIALIZERS)
-set(SOURCES_SYSTEM ${SOURCES_FILESYSTEM} src/system/os.cpp src/system/terminal.cpp src/system/system.cpp)
+set(SOURCES_SYSTEM ${SOURCES_FILESYSTEM} src/system/os.cpp src/system/terminal.cpp src/system/system.cpp src/system/uri.cpp)
 set(SOURCES_BASE src/lambdacommon.cpp src/serializable.cpp src/string.cpp src/path.cpp)
 set(SOURCES_FILES ${SOURCES_CONNECTION} ${SOURCES_DOCUMENT} ${SOURCES_GRAPHICS} ${SOURCES_SERIALIZERS} ${SOURCES_SYSTEM} ${SOURCES_BASE})
 
