--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
 #
 # AperLambda ignore file
 #
+# v0.2
 
 # JetBrains
 .idea/
 *.iml
+## Intellij IDEA
+out/
 ## CLion
 cmake-build-debug/
 cmake-build-release/
+## Eclipse
+eclipse
+*.launch
+.settings
+.metadata
+.classpath
+.project
 
 # Build system
 ## Cargo
@@ -24,5 +34,10 @@ package-lock.json
 ## VSCode
 .vscode/
 
+# Logging
+logs/
+
 # Common
+bin/
 build/
+run/
