--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,6 @@
-version: {build}
+version: 1.6.1
 
 os:
-  - Visual Studio 2015
   - Visual Studio 2017
 
 configuration: Release
@@ -12,12 +11,12 @@ branches:
 build:
   verbosity: detailed
 
-init: []
+init:
+  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
 
 install: []
 
 build_script:
-  - IF "%APPVEYOR_BUILD_WORKER_IMAGE%" == "Visual Studio 2015" ( SET GEN="Visual Studio 14 2015") ELSE (SET GEN="Visual Studio 15 2017")
   - mkdir build
   - cd build
   - cmake . -G%GEN%
