:bookmark: λcommon v1.7.2: Added time.h and fixed C wrapper's degrees and radians conversions.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #
 # AperLambda ignore file
 #
-# v0.5
+# v0.6
 
 # JetBrains
 .idea/
@@ -9,8 +9,8 @@
 ## Intellij IDEA
 out/
 ## CLion
-cmake-build-debug/
-cmake-build-release/
+cmake-build-debug*/
+cmake-build-release*/
 ## Eclipse
 eclipse
 *.launch
@@ -27,6 +27,7 @@ CMakeSettings.json
 Cargo.lock
 ## CMake
 CMakeCache.txt
+CMakeFiles/
 ## Gradle
 .gradle/
 ## Node.JS
@@ -43,6 +44,16 @@ logs/
 # Languages
 ## Rust
 **/*.rs.bk
+
+# OS
+## Windows
+desktop.ini
+
+# File types
+*.dll
+*.so
+*.lib
+lib*.a
 
 # Common
 bin/
