--- a/c_wrapper/tests/CMakeLists.txt
+++ b/c_wrapper/tests/CMakeLists.txt
@@ -2,5 +2,9 @@ set(CMAKE_C_STANDARD 11)
 
 include_directories(../include)
 
-add_executable(clambdacommon_test test.c)
+if (WIN32)
+	set(LCOMMON_ICON lambdacommon.rc)
+endif ()
+
+add_executable(clambdacommon_test test.c ${LCOMMON_ICON})
 target_link_libraries(clambdacommon_test clambdacommon lambdacommon)
