:bookmark: λcommon v1.8.1: Added maths::clamp_reset(number, min, max).

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ addons:
       - cmake-data
 
 before_install:
+  - echo "Installing compile dependencies..."
   - sudo apt-get update -y -qq
   - sudo apt-get install -y -qq libyajl-dev libxml2-dev libxqilla-dev
   - if [ "$CXX" = "clang++" ]; then sudo apt-get install -y  -qq libstdc++-6-dev; fi
